# Fast_api_with_mongo

./: .dockerignore  Dockerfile  Makefile  REDIS_USAGE.md  pyproject.toml
src/: __main__.py
src/api/: dependencies.py
src/api/dto/: __init__.py  user.py
src/api/providers/: __init__.py  stub.py
src/api/routers/: __init__.py  user.py
src/common/cache/: __init__.py  redis.py
src/common/interfaces/: __init__.py  crud.py  repository.py
src/common/serializers/: __init__.py  orjson_serializer.py
src/core/: gunicorn.py  logger.py  server.py  settings.py
src/database/core/: connection.py
src/database/models/: __init__.py  base.py  user.py
src/database/repositories/: __init__.py  base.py  crud.py  user.py
src/database/repositories/types/: repository.py
src/services/: __init__.py  base.py  minio.py  user.py
