[tool.poetry]
package-mode = false
name = "chat api"
version = "0.1.0"
description = ""
authors = ["Nikitech <lobanovn@rocketdata.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
motor = "^3.7.0"
uvicorn = "^0.34.0"
starlette = "^0.45.3"
httpx = "^0.28.1"
pydantic-settings = "^2.7.1"
gunicorn = "^23.0.0"
aioboto3 = "^15.4.0"
redis = "^5.0.0"
orjson = "^3.10.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
